k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photon-memristor-sim
  labels:
    app: photon-memristor-sim
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: photon-memristor-sim
